# cscope

./: .gitignore  CMakeLists.txt
Resources/: interface.html
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/WaveformComponent/: WaveformComponent.cpp  WaveformComponent.h
cscope_artefacts/AU/cscope.component/Contents/: Info.plist
cscope_artefacts/JuceLibraryCode/: Defs.txt  Info.txt  JuceHeader.h
cscope_artefacts/JuceLibraryCode/cscope_Standalone/: Info.plist
cscope_artefacts/JuceLibraryCode/cscope_VST3/: Info.plist
cscope_artefacts/Resources/: interface.html
cscope_artefacts/VST3/cscope.vst3/Contents/Resources/: moduleinfo.json
cscope_artefacts/VST3/cscope.vst3/Contents/_CodeSignature/: CodeResources
juce_binarydata_BinaryData/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  input_file_list
